test layout for mobile, using same background

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,14 +43,16 @@ body {
   /* Ensures text wraps rather than staying on one line */
 }
 
-.outlined-text-white {
-  text-shadow:
-    1px 1px 0 #fff,
-    /* Top-right */
-    -1px 1px 0 #fff,
-    /* Top-left */
-    -1px -1px 0 #fff,
-    /* Bottom-left */
-    1px -1px 0 #fff;
-  /* Bottom-right */
+@media (max-width: 767px) {
+  .outlined-text-white {
+    text-shadow:
+      1px 1px 0 #fff,
+      -1px 1px 0 #fff,
+      -1px -1px 0 #fff,
+      1px -1px 0 #fff;
+  }
+
+  .footer-text-dark {
+    color: gray;
+  }
 }
