--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,6 +66,18 @@ body {
   }
 }
 
+@media (min-width: 900px) and (max-width: 1199px) {
+  .text-smart-animation {
+    font-size: 8rem !important;
+    margin-left: 1rem;
+  }
+
+  .text-maneuver-animation {
+    font-size: 5rem !important;
+    margin-left: 2rem;
+  }
+}
+
 @media (min-width: 1024px) and (max-width: 1200px) {
   .text-smart-animation {
     font-size: 9rem !important;
