--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,6 +66,18 @@ body {
   }
 }
 
+@media (min-width: 200px) and (max-width: 639px) {
+  .text-smart-animation {
+    font-size: 3rem !important;
+    -webkit-text-stroke: 1px black;
+  }
+
+  .text-maneuver-animation {
+    font-size: 2rem !important;
+    -webkit-text-stroke: 1px black;
+  }
+}
+
 @media (min-width: 768px) and (max-width: 799px) {
   .text-smart-animation {
     font-size: 7rem !important;
