--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,7 +74,19 @@ body {
   }
 }
 
-@media (min-width: 200px) and (max-width: 639px) {
+@media (min-width: 300px) and (max-width: 415px) {
+  .text-smart-animation {
+    font-size: 2.8rem !important;
+    -webkit-text-stroke: 1px black;
+  }
+
+  .text-maneuver-animation {
+    font-size: 1.8rem !important;
+    -webkit-text-stroke: 1px black;
+  }
+}
+
+@media (min-width: 416px) and (max-width: 639px) {
   .text-smart-animation {
     font-size: 3rem !important;
     -webkit-text-stroke: 1px black;
