--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,7 +70,7 @@ body {
   }
 }
 
-@media (min-width: 300px) and (max-width: 400px) {
+@media (min-width: 300px) and (max-width: 399px) {
   .text-smart-animation {
     font-size: 2rem !important;
     -webkit-text-stroke: 1px black;
@@ -82,7 +82,7 @@ body {
   }
 }
 
-@media (min-width: 400px) and (max-width: 500px) {
+@media (min-width: 400px) and (max-width: 499px) {
   .text-smart-animation {
     font-size: 2rem !important;
     -webkit-text-stroke: 1px black;
@@ -90,6 +90,18 @@ body {
 
   .text-maneuver-animation {
     font-size: 1.4rem !important;
+    -webkit-text-stroke: 1px black;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 599px) {
+  .text-smart-animation {
+    font-size: 2.5rem !important;
+    -webkit-text-stroke: 1px black;
+  }
+
+  .text-maneuver-animation {
+    font-size: 1.6rem !important;
     -webkit-text-stroke: 1px black;
   }
 }
@@ -197,7 +209,7 @@ body {
 
 /* Custom scrollbar for horizontal scrolling */
 .scrollbar-custom::-webkit-scrollbar {
-  height: 12px; /* Adjust scrollbar height */
+  height: 0px; /* Adjust scrollbar height */
 }
 
 .scrollbar-custom::-webkit-scrollbar-thumb {
