--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -173,6 +173,21 @@ body {
   }
 }
 
+@media (min-width: 1100px) and (max-width: 1199px) {
+  .text-smart-animation {
+    font-size: 6rem !important;
+    margin-left: 3rem;
+    margin-bottom: 1rem;
+    -webkit-text-stroke: 3px black;
+  }
+
+  .text-maneuver-animation {
+    font-size: 4rem !important;
+    margin-left: 4rem;
+    -webkit-text-stroke: 3px black;
+  }
+}
+
 @media (min-width: 1280px) and (max-width: 1499px) {
   .text-smart-animation {
     font-size: 11rem !important;
